--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -5,7 +5,7 @@
             <div class="ltb">
                 <form action="{% url 'account:login' %}" method="post">
                 {% csrf_token %}
-                <table cellpadding="0" cellspacing="0" width="335">
+                <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
                     <tr>
                         <td colspan="2">用户登录</td>
                     </tr>
@@ -32,17 +32,17 @@
             <div class="ltb">
                 <form action="{% url 'account:register' %}" method="post" onSubmit="return chekreg(this)">
                 {% csrf_token %}
-                <table cellpadding="0" cellspacing="0" width="335">
+                <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
                     <tr>
                         <td colspan="2">用户注册</td>
                     </tr>
                     <tr>
                         <td align="right">用户名：</td>
-                        <td><input type="text" name="uname" class="input" maxlength="11"/>(手机号)</td>
+                        <td><input type="text" name="uname" class="input" maxlength="11"/></td>
                     </tr>
                     <tr>
                         <td align="right">密码：</td>
-                        <td><input type="password" name="pwd" class="input"/>(4-12位)</td>
+                        <td><input type="password" name="pwd" class="input"/></td>
                     </tr>
                     <tr>
                         <td align="right">确认密码：</td>
